update for All In week 1

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -35,56 +35,61 @@
 
 <body>
 
-  <div align="middle"><img src="./img/dark-side.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/fps-guide-logo.png" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>Week 4 - The Dark Side</h1>
+  <h1><i>ALL IN</i> Week 1 - Prayer</h1>
 
   <h2>Life / Intro Questions</h2>
-
     <ul>
-      <li>What are the top three things on your bucket list? Are you scared of any of them?</li>
-      <li>Have you been fearful of rejection this week? How so?</li>
+      <li>How was your Christmas/New Year’s break?</li>
+      <li>Did you do anything new?</li>
+      <li>Did your relationship with God grow or get put on pause?</li>
     </ul>
 
   <h2>Connection Question</h2>
-
     <ul>
-      <li>What is your relationship with Jesus like? If comfortable, explain.</li>
+      <li>Has there ever been a time in your life when you were put on the spot to pray? What did you do? Was it simply to pray for the food at Christmas? Or was it something a little more intense like praying for healing or for a miracle from God? Were you nervous?
+      </li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
-
     <ul>
-      <li>Fear derails us from the purpose God has for us, which is to further the Kingdom!</li>
+      <li>Prayer is a relationship, not just a religious activity.</li>
+    </ul>
+
+  <h2>Church Value</h2>
+    <ul>
+      <li>We Put God First</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>Luke 4:18-19</b> The Spirit of the Lord is on me, because he has anointed me to proclaim good news to the poor. He has sent me to proclaim freedom for the prisoners and recovery of sight for the blind, to set the oppressed free, to proclaim the year of the Lord’s favor.</li>
+      <li><b>Matthew 6:5-13</b> And when you pray, do not be like the hypocrites, for they love to pray standing in the synagogues and on the street corners to be seen by others. Truly I tell you, they have received their reward in full. <sup>6</sup>But when you pray, go into your room, close the door and pray to your Father, who is unseen. Then your Father, who sees what is done in secret, will reward you. <sup>7</sup>And when you pray, do not keep on babbling like pagans, for they think they will be heard because of their many words. <sup>8</sup>Do not be like them, for your Father knows what you need before you ask him. <sup>9</sup>This, then, is how you should pray: Our Father in heaven, hallowed be your name, <sup>10</sup>your kingdom come, your will be done, on earth as it is in heaven. <sup>11</sup>Give us today our daily bread. <sup>12</sup>And forgive us our debts, as we also have forgiven our debtors. <sup>13</sup>And lead us not into temptation, but deliver us from the evil one.
+        </li>
      <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>How often do you find yourself embarrassed when talking about Jesus to others?</li>
-    <li>What struggles in your own life do you feel are too powerful for you or you’re too fearful of them? Explain if comfortable.</li>
-    <li>Do you feel as though you have found some purpose in life? Or are you still searching?</li> 
+    <li>When you pray, what are some ways that you can recognize God?</li>
+    <li>What are some things that God has provided for you? Have you thanked Him for those things?</li>
+    <li>How often have you felt like God was telling you to do something but you never took action?</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-      <li>If you get embarrassed talking about Jesus, what are some ways this week that you can move forward with it? Encourage them that 5 minutes of being uncomfortable can potentially change someone's life!</li>
+      <li>How can you recognize God more?</li>
+      <li>How can you thank Him more?</li>
+      <li>How can you take action more?</li>
     </ul>
   
 
   <h2>Take It Out</h2>
-
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>Remind your students that RIGHT NOW is the best time to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> tonight for their LAST CHANCE to lock in the super-low $49 price. The cost will increase tonight at midnight!</li>
-    <li>Refuse to let money stand in the way – check <a href="https://fpsleaders.com">FPSLeaders.com</a> for a scholarship application if needed.</li>
-    <li>We will not have fpStudents for two weeks because of Christmas and New Years Day - we will be back on Wednesday, Jan. 8th!</li>
+    <li>Remind your students that it is not too late to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> immediately before the registration window closes.</li>
+    <li>Refuse to let money stand in the way – check <a href="https://fpsleaders.com">FPSLeaders.com</a> for a scholarship application.</li>
   </ul>
 
   </body>
