--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -92,6 +92,8 @@
     <li>Refuse to let money stand in the way – check <a href="https://fpsleaders.com">FPSLeaders.com</a> for a scholarship application.</li>
   </ul>
 
+  <p><mark><b>Attention All Leaders:</b> there will be a MANDATORY Fusion Leader Meeting next Wednesday in the Chapel at 7:00 PM while students are in Large Group where we will discuss Fusion plans & expectations and answer all your questions.</mark></p>
+
   </body>
 
   </html>
