update meeting notice

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -92,7 +92,7 @@
     <li>Refuse to let money stand in the way – check <a href="https://fpsleaders.com">FPSLeaders.com</a> for a scholarship application.</li>
   </ul>
 
-  <p><mark><b>Attention All Leaders:</b> there will be a MANDATORY Fusion Leader Meeting next Wednesday in the Chapel at 7:00 PM while students are in Large Group where we will discuss Fusion plans & expectations and answer all your questions.</mark></p>
+  <p><mark><b>Attention All Leaders:</b> there will be a MANDATORY Fusion Leader Meeting next Wednesday where we will discuss Fusion plans & expectations and answer all your questions. More details to be announced soon - plan on being here!</mark></p>
 
   </body>
 
