prep for All In week 2

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -37,62 +37,58 @@
 
   <div align="middle"><img src="./img/fps-guide-logo.png" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>ALL IN</i> Week 1 - Prayer</h1>
+  <h1><i>ALL IN</i> Week 2 - The Word</h1>
 
   <h2>Life / Intro Questions</h2>
     <ul>
-      <li>How was your Christmas/New Year’s break?</li>
-      <li>Did you do anything new?</li>
-      <li>Did your relationship with God grow or get put on pause?</li>
+      <li>How have you grown in your prayer life this past week?</li>
+      <li>Did you pray for somebody else this week?</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>Has there ever been a time in your life when you were put on the spot to pray? What did you do? Was it simply to pray for the food at Christmas? Or was it something a little more intense like praying for healing or for a miracle from God? Were you nervous?
-      </li>
+      <li>If you’re being honest, how often do you actually read the Bible? That could be doing a devotion, listening to the audio Bible, or actually sitting down and reading it word by word. Can you tell a difference in your life when you read more regularly than when you don’t?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
     <ul>
-      <li>Prayer is a relationship, not just a religious activity.</li>
+      <li>Jesus is the word made flesh.</li>
     </ul>
 
   <h2>Church Value</h2>
     <ul>
-      <li>We Put God First</li>
+      <li>We Elevate Those Around Us</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>Matthew 6:5-13</b> And when you pray, do not be like the hypocrites, for they love to pray standing in the synagogues and on the street corners to be seen by others. Truly I tell you, they have received their reward in full. <sup>6</sup>But when you pray, go into your room, close the door and pray to your Father, who is unseen. Then your Father, who sees what is done in secret, will reward you. <sup>7</sup>And when you pray, do not keep on babbling like pagans, for they think they will be heard because of their many words. <sup>8</sup>Do not be like them, for your Father knows what you need before you ask him. <sup>9</sup>This, then, is how you should pray: Our Father in heaven, hallowed be your name, <sup>10</sup>your kingdom come, your will be done, on earth as it is in heaven. <sup>11</sup>Give us today our daily bread. <sup>12</sup>And forgive us our debts, as we also have forgiven our debtors. <sup>13</sup>And lead us not into temptation, but deliver us from the evil one.
-        </li>
+      <li><b>Mark 4:13-20</b> Then Jesus said to them, “Don’t you understand this parable? How then will you understand any parable? <sup>14</sup>The farmer sows the word. <sup>15</sup>Some people are like seed along the path, where the word is sown. As soon as they hear it, Satan comes and takes away the word that was sown in them. <sup>16</sup>Others, like seed sown on rocky places, hear the word and at once receive it with joy. <sup>17</sup>But since they have no root, they last only a short time. When trouble or persecution comes because of the word, they quickly fall away. <sup>18</sup>Still others, like seed sown among thorns, hear the word; <sup>19</sup>but the worries of this life, the deceitfulness of wealth and the desires for other things come in and choke the word, making it unfruitful. <sup>20</sup>Others, like seed sown on good soil, hear the word, accept it, and produce a crop—some thirty, some sixty, some a hundred times what was sown.”</li>
      <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>When you pray, what are some ways that you can recognize God?</li>
-    <li>What are some things that God has provided for you? Have you thanked Him for those things?</li>
-    <li>How often have you felt like God was telling you to do something but you never took action?</li>
+    <li>Which one do you relate to? The seed on the path, rocks, thorns, or good soil?</li>
+    <li>What is our seed and how do we make sure we sow/use it well?</li>
+    <li>What does it mean when it says seed sown on good soil can produce thirty, sixty, or a hundred times what was sown?</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-      <li>How can you recognize God more?</li>
-      <li>How can you thank Him more?</li>
-      <li>How can you take action more?</li>
+      <li>What steps can you take this week to be in the Word more?</li>
+      <li>Start a devotional by downloading the Bible app.</li>
+      <li>Set times during the week that you will read the Word and then message your group about what you learned from it.</li>
     </ul>
   
 
   <h2>Take It Out</h2>
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>Remind your students that it is not too late to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> immediately before the registration window closes.</li>
-    <li>Refuse to let money stand in the way – check <a href="https://fpsleaders.com">FPSLeaders.com</a> for a scholarship application.</li>
+    <li>Remind your students that tonight is their absolute last chance to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> immediately before the registration window closes tonight at midnight!</li>
   </ul>
 
-  <p><mark><b>Attention All Leaders:</b> there will be a MANDATORY Fusion Leader Meeting next Wednesday where we will discuss Fusion plans & expectations and answer all your questions. More details to be announced soon - plan on being here!</mark></p>
+  <p><mark><b>Attention All Leaders:</b> there will be a MANDATORY Fusion Leader Meeting tonight where we will discuss Fusion plans & expectations and answer all your questions.</mark></p>
 
   </body>
 
