add session files

--- a/Fusion2020/Session1.html
+++ b/Fusion2020/Session1.html
@@ -35,60 +35,69 @@
 
 <body>
 
-  <div align="middle"><img src="./img/fps-guide-logo.png" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="../img/fusion-guide-logo.png" alt="Fusion Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>ALL IN</i> Week 2 - The Word</h1>
+  <h1>SMALL GROUP ONE: "STEP IN"</h1>
 
   <h2>Life / Intro Questions</h2>
     <ul>
-      <li>How have you grown in your prayer life this past week?</li>
-      <li>Did you pray for somebody else this week?</li>
+      <li>What’s one good and one bad thing that happened at school this week?</li>
+      <li>What was your favorite part about opening night of Fusion?</li>
     </ul>
 
-  <h2>Connection Question</h2>
+  <h2>Connection Questions</h2>
     <ul>
-      <li>If you’re being honest, how often do you actually read the Bible? That could be doing a devotion, listening to the audio Bible, or actually sitting down and reading it word by word. Can you tell a difference in your life when you read more regularly than when you don’t?</li>
+      <li>What’s something you’ve stepped into this school year that you wish you wouldn’t have?</li>
+      <li>How have you stepped into your relationship with God?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
     <ul>
-      <li>Jesus is the word made flesh.</li>
-    </ul>
-
-  <h2>Church Value</h2>
-    <ul>
-      <li>We Elevate Those Around Us</li>
+      <li>Every Journey Begins With A Single Step.</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>Mark 4:13-20</b> Then Jesus said to them, “Don’t you understand this parable? How then will you understand any parable? <sup>14</sup>The farmer sows the word. <sup>15</sup>Some people are like seed along the path, where the word is sown. As soon as they hear it, Satan comes and takes away the word that was sown in them. <sup>16</sup>Others, like seed sown on rocky places, hear the word and at once receive it with joy. <sup>17</sup>But since they have no root, they last only a short time. When trouble or persecution comes because of the word, they quickly fall away. <sup>18</sup>Still others, like seed sown among thorns, hear the word; <sup>19</sup>but the worries of this life, the deceitfulness of wealth and the desires for other things come in and choke the word, making it unfruitful. <sup>20</sup>Others, like seed sown on good soil, hear the word, accept it, and produce a crop—some thirty, some sixty, some a hundred times what was sown.”</li>
-     <li>What is Jesus saying in this scripture?</li>
+      <li><b>Luke 4:38-40</b> Jesus left the synagogue and went to the home of Simon. Now Simon’s mother-in-law was suffering from a high fever, and they asked Jesus to help her. <sup>39</sup>So he bent over her and rebuked the fever, and it left her. She got up at once and began to wait on them. <sup>40</sup>At sunset, the people brought to Jesus all who had various kinds of sickness, and laying his hands on each one, he healed them.</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>Which one do you relate to? The seed on the path, rocks, thorns, or good soil?</li>
-    <li>What is our seed and how do we make sure we sow/use it well?</li>
-    <li>What does it mean when it says seed sown on good soil can produce thirty, sixty, or a hundred times what was sown?</li>
+    <li>If you had a family member that was sick, what would you do?</li>
+    <li>How would you respond if you saw someone healed instantaneously?</li>
+    <li>Would you bring people or the miracle or would you keep it for yourself?</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-      <li>What steps can you take this week to be in the Word more?</li>
-      <li>Start a devotional by downloading the Bible app.</li>
-      <li>Set times during the week that you will read the Word and then message your group about what you learned from it.</li>
-    </ul>
-  
+      <li>How are you going to step into tough conversations?</li>
+      <li>How are you going to step in and share the gospel?</li>
+  </ul>
 
   <h2>Take It Out</h2>
   <ul>
-    <li>Close small group out with prayer requests.</li>
-    <li>Remind your students that tonight is their absolute last chance to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> immediately before the registration window closes tonight at midnight!</li>
+    <li>Wake Up Time</li>
+    <li>Next Day Schedule</li>      
   </ul>
 
-  <p><mark><b>Attention All Leaders:</b> there will be a MANDATORY Fusion Leader Meeting tonight where we will discuss Fusion plans & expectations and answer all your questions.</mark></p>
+  <hr>
+
+  <h2>"Step In" Car Questions</h2>
+  <ul>
+    <li>What are some things that you are committing to this year?</li>
+    <li>What are some disciplines you’ll participate in this year and what will change because of it?</li>
+    <li>How hungry are you for God?</li>
+    <li>What obstacles and Distractions need to be removed from your life?</li>
+    <li>Are you growing in your knowledge of Jesus and His teachings? (1 Chronicles 16:11)</li>
+    <li>When did you choose to follow Jesus?</li>
+    <li>How has following Jesus given you an abundant life?</li>
+    <li>What would it look like for you to go ALL IN for Jesus?</li>
+    <li>What happened when Peter followed at a distance? (John 18:15-27)</li>
+  </ul>
+
+  <h2>Salvation Follow-Up</h2>
+  <p>Did any of your students make a decision to follow Jesus this weekend? If so, make sure to continue to have some follow-up conversations with them this weekend about their decision, as you encourage them and discuss any questions they may have. In those conversations, please also talk about baptism with them. If they would like to be baptized this weekend, please reach out to their parents to get permission first and let your coach know once the parents have given permission.</p>
 
   </body>
 
