update leader meeting note

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -88,7 +88,7 @@
     <li>Remind your students that tonight is their absolute last chance to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> immediately before the registration window closes tonight at midnight!</li>
   </ul>
 
-  <p><mark><b>Attention All Leaders:</b> there will be a MANDATORY Fusion Leader Meeting tonight where we will discuss Fusion plans & expectations and answer all your questions.</mark></p>
+  <p><mark><b>Attention All Leaders:</b> We will have a mandatory leader meeting tonight at 7:00 PM in the Chapel while students are in Large Group. We will discuss Fusion rules and expectations, as well as answer all your questions.</mark></p>
 
   </body>
 
