update for All In week 3

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -35,60 +35,59 @@
 
 <body>
 
-  <div align="middle"><img src="./img/fps-guide-logo.png" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/fps-guide-logo.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>ALL IN</i> Week 2 - The Word</h1>
+  <h1><i>ALL IN</i> Week 3 - Breaking of Bread</h1>
 
   <h2>Life / Intro Questions</h2>
     <ul>
-      <li>How have you grown in your prayer life this past week?</li>
-      <li>Did you pray for somebody else this week?</li>
+      <li>Have you read the Word more this past week?</li>
+      <li>How has it made you feel?</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>If you’re being honest, how often do you actually read the Bible? That could be doing a devotion, listening to the audio Bible, or actually sitting down and reading it word by word. Can you tell a difference in your life when you read more regularly than when you don’t?</li>
+      <li>How many of you when you have dinner at night actually sit down at a dinner table with your family and talk about the day while you’re eating all together? If you don’t do this, is this something you wish happened? Why or why not?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
     <ul>
-      <li>Jesus is the word made flesh.</li>
+      <li>Jesus is the bread of life.</li>
     </ul>
 
   <h2>Church Value</h2>
     <ul>
-      <li>We Elevate Those Around Us</li>
+      <li>We Serve Others</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>Mark 4:13-20</b> Then Jesus said to them, “Don’t you understand this parable? How then will you understand any parable? <sup>14</sup>The farmer sows the word. <sup>15</sup>Some people are like seed along the path, where the word is sown. As soon as they hear it, Satan comes and takes away the word that was sown in them. <sup>16</sup>Others, like seed sown on rocky places, hear the word and at once receive it with joy. <sup>17</sup>But since they have no root, they last only a short time. When trouble or persecution comes because of the word, they quickly fall away. <sup>18</sup>Still others, like seed sown among thorns, hear the word; <sup>19</sup>but the worries of this life, the deceitfulness of wealth and the desires for other things come in and choke the word, making it unfruitful. <sup>20</sup>Others, like seed sown on good soil, hear the word, accept it, and produce a crop—some thirty, some sixty, some a hundred times what was sown.”</li>
+      <li><b>John 6:26-59</b> Because this is a long passage, we recommend looking it up on the YouVersion app on your phone and using a translation designed around easy readability, like the <a href="https://www.bible.com/bible/116/JHN.6.NLT">New Living Translation (NLT)</a> for older students or the <a href="https://www.bible.com/bible/110/JHN.6.NIRV">New International Reader’s Version (NIRV)</a> for younger students. You could also have students take turns reading through the passage or read through it in sections.</li>
      <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>Which one do you relate to? The seed on the path, rocks, thorns, or good soil?</li>
-    <li>What is our seed and how do we make sure we sow/use it well?</li>
-    <li>What does it mean when it says seed sown on good soil can produce thirty, sixty, or a hundred times what was sown?</li>
+    <li>Have you ever thought something was God but realized it wasn’t?</li>
+    <li>How does God demonstrate real love?</li>
+    <li>Why do we say “Real people, real problems, real love”?</li>
+    <li>What do you think your God given purpose is?</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-      <li>What steps can you take this week to be in the Word more?</li>
-      <li>Start a devotional by downloading the Bible app.</li>
-      <li>Set times during the week that you will read the Word and then message your group about what you learned from it.</li>
+      <li>How can I depend on Jesus when I come face to face with the things I struggle with? How do I make Him the bread of my life?</li>
+      <li>Take practical steps to realize your purpose and potential.</li>
+      <li>Am I willing to be broken in order to be made whole?</li>
     </ul>
   
 
   <h2>Take It Out</h2>
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>Remind your students that tonight is their absolute last chance to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> immediately before the registration window closes tonight at midnight!</li>
+    <li>Remind your students that Fusion starts on Friday night – they need to meet at your host home at 6:30 PM.</li>
   </ul>
-
-  <p><mark><b>Attention All Leaders:</b> We will have a mandatory leader meeting tonight at 7:00 PM in the Chapel while students are in Large Group. We will discuss Fusion rules and expectations, as well as answer all your questions.</mark></p>
 
   </body>
 
