--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -37,56 +37,56 @@
 
   <div align="middle"><img src="./img/fps-guide-logo.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>ALL IN</i> Week 3 - Breaking of Bread</h1>
+  <h1><i>ALL IN</i> Week 4 - Fellowship</h1>
 
   <h2>Life / Intro Questions</h2>
     <ul>
-      <li>Have you read the Word more this past week?</li>
-      <li>How has it made you feel?</li>
+      <li>How did you depend on Jesus this past week?</li>
+      <li>Were you broke at any point in order to be made whole? Friendships? Family?</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>How many of you when you have dinner at night actually sit down at a dinner table with your family and talk about the day while you’re eating all together? If you don’t do this, is this something you wish happened? Why or why not?</li>
+      <li>How many close friends do you have in your life right now? People that you say you talk to almost every single day. Are they good people or are they bad influences?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
     <ul>
-      <li>Jesus is the bread of life.</li>
+      <li>Fellowship brings Joy.</li>
     </ul>
 
   <h2>Church Value</h2>
     <ul>
-      <li>We Serve Others</li>
+      <li>We Grow Together</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>John 6:26-59</b> Because this is a long passage, we recommend looking it up on the YouVersion app on your phone and using a translation designed around easy readability, like the <a href="https://www.bible.com/bible/116/JHN.6.NLT">New Living Translation (NLT)</a> for older students or the <a href="https://www.bible.com/bible/110/JHN.6.NIRV">New International Reader’s Version (NIRV)</a> for younger students. You could also have students take turns reading through the passage or read through it in sections.</li>
+      <li><b>1 John 1:3-4</b> We proclaim to you what we have seen and heard, so that you also may have fellowship with us. And our fellowship is with the Father and with his Son, Jesus Christ. <sup>4</sup>We write this to make our joy complete.</li>
      <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>Have you ever thought something was God but realized it wasn’t?</li>
-    <li>How does God demonstrate real love?</li>
-    <li>Why do we say “Real people, real problems, real love”?</li>
-    <li>What do you think your God given purpose is?</li>
+    <li>Have you ever felt like you were all alone and had no one you could depend on?</li>
+    <li>How important is small group to you?</li>
+    <li>Do you think you could grow more on your own or together with other people?</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-      <li>How can I depend on Jesus when I come face to face with the things I struggle with? How do I make Him the bread of my life?</li>
-      <li>Take practical steps to realize your purpose and potential.</li>
-      <li>Am I willing to be broken in order to be made whole?</li>
-    </ul>
+    <li>How can I help people far from God that don’t have community and feel lost?</li>
+    <li>How can I help myself find greater community?</li>
+    <li>Meet with your small group outside of Wednesday night.</li>
+    <li>Start or join a Move Group at your school.</li>
+  </ul>
   
 
   <h2>Take It Out</h2>
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>Remind your students that Fusion starts on Friday night – they need to meet at your host home at 6:30 PM.</li>
+    <li>After prayer, remind them of THE WEEKEND and any upcoming group events!</li>
   </ul>
 
   </body>
