update for The Fire week 1

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -35,51 +35,39 @@
 
 <body>
 
-  <div align="middle"><img src="./img/fps-guide-logo.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/logo-fps-pel.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>ALL IN</i> Week 4 - Fellowship</h1>
+  <h1>Week 1 - The Fire</h1>
 
   <h2>Life / Intro Questions</h2>
     <ul>
-      <li>How did you depend on Jesus this past week?</li>
-      <li>Were you broke at any point in order to be made whole? Friendships? Family?</li>
+      <li>How have your first few weeks of school been? Classes, teachers, friends?</li>
+      <li>Turn to the person next to you and tell them one high and one low of your week.</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>How many close friends do you have in your life right now? People that you say you talk to almost every single day. Are they good people or are they bad influences?</li>
-    </ul>
-
-  <h2>Sermon in a Sentence</h2>
-    <ul>
-      <li>Fellowship brings Joy.</li>
-    </ul>
-
-  <h2>Church Value</h2>
-    <ul>
-      <li>We Grow Together</li>
+      <li>Have you ever seen a restoration take place? With a car, friend situation, family relationship, etc. What did it look like before the restoration and then what did it look like after the restoration?</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>1 John 1:3-4</b> We proclaim to you what we have seen and heard, so that you also may have fellowship with us. And our fellowship is with the Father and with his Son, Jesus Christ. <sup>4</sup>We write this to make our joy complete.</li>
+      <li><b>Ezekiel 37:4-6</b> <sup>4</sup>Then he said to me, “Speak a prophetic message to these bones and say, ‘Dry bones, listen to the word of the Lord! <sup>5</sup>This is what the Sovereign Lord says: Look! I am going to put breath into you and make you live again! <sup></sup>I will put flesh and muscles on you and cover you with skin. I will put breath into you, and you will come to life. Then you will know that I am the Lord.’”</li>
      <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>Have you ever felt like you were all alone and had no one you could depend on?</li>
-    <li>How important is small group to you?</li>
-    <li>Do you think you could grow more on your own or together with other people?</li>
+    <li>How often do you find yourself wondering if your friendships or family relationships can be restored or revived?</li>
+    <li>Does wondering about these specific situations in your life make you feel hopeless? How come?</li>
+    <li>If comfortable, what are some things in your life (relationships, school life, home life, physical body or mentally) that need revival and restoration? Why do you need that revival?</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-    <li>How can I help people far from God that don’t have community and feel lost?</li>
-    <li>How can I help myself find greater community?</li>
-    <li>Meet with your small group outside of Wednesday night.</li>
-    <li>Start or join a Move Group at your school.</li>
+    <li>What are some ways this week that you can help God be the natural solution while He takes care of the supernatural? Tell them that God wants to use them to speak his words over the broken situations around them and then God will take care of the rest.</li>
+    <li>How can you bring restoration in your own life this week?</li>
   </ul>
   
 
