add baptism follow-up notice

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -70,6 +70,12 @@
     <li>How can you bring restoration in your own life this week?</li>
   </ul>
   
+  <h2>Baptism Follow-Up</h2>
+  <ul>
+    <li>Did you make a decision to follow Jesus for the first time at Fusion? Or maybe even tonight?</li>
+    <li>Have you made that decision sometime in the past but you've never gone public by being baptized?</li>
+  </ul>
+  <p>Baptism is our first official act of obedience as a new Christian and a super easy way to tell the world about your decision. Encourage your students to "seal the deal" and get baptized if they are a follower of Jesus!</p>
 
   <h2>Take It Out</h2>
   <ul>
