update for The Fire week 2

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -37,37 +37,41 @@
 
   <div align="middle"><img src="./img/logo-fps-pel.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>Week 1 - The Fire</h1>
+  <h1>Week 2 - The Fire</h1>
 
   <h2>Life / Intro Questions</h2>
     <ul>
-      <li>How have your first few weeks of school been? Classes, teachers, friends?</li>
-      <li>Turn to the person next to you and tell them one high and one low of your week.</li>
+      <li>What are your favorite shows to watch on Netflix?</li>
+      <li>How did you do last week making steps towards restoration in your life?</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>Have you ever seen a restoration take place? With a car, friend situation, family relationship, etc. What did it look like before the restoration and then what did it look like after the restoration?</li>
+      <li>Share a story about a time where you saw something you couldn’t explain. Maybe it was a miracle or a strange phenomenon. What happened in that event and how did it change you?</li>
+    </ul>
+
+  <h2>Sermon in a Sentence</h2>
+    <ul>
+      <li>We do the natural, and God does the supernatural.</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>Ezekiel 37:4-6</b> <sup>4</sup>Then he said to me, “Speak a prophetic message to these bones and say, ‘Dry bones, listen to the word of the Lord! <sup>5</sup>This is what the Sovereign Lord says: Look! I am going to put breath into you and make you live again! <sup></sup>I will put flesh and muscles on you and cover you with skin. I will put breath into you, and you will come to life. Then you will know that I am the Lord.’”</li>
+      <li><b>2 Chronicles 7:12-14</b> <sup>12</sup>Then one night the Lord appeared to Solomon and said, “I have heard your prayer and have chosen this Temple as the place for making sacrifices. <sup></sup>At times I might shut up the heavens so that no rain falls, or command grasshoppers to devour your crops, or send plagues among you. <sup></sup>Then if my people who are called by my name will humble themselves and pray and seek my face and turn from their wicked ways, I will hear from heaven and will forgive their sins and restore their land.</li>
      <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>How often do you find yourself wondering if your friendships or family relationships can be restored or revived?</li>
-    <li>Does wondering about these specific situations in your life make you feel hopeless? How come?</li>
-    <li>If comfortable, what are some things in your life (relationships, school life, home life, physical body or mentally) that need revival and restoration? Why do you need that revival?</li>
+    <li>How often do you find yourself being prideful in a situation? How do you think that pride can negatively affect the situation?</li>
+    <li>How often do you find yourself praying as a last resort, not a first response to trouble in your life? Why is that?</li>
+    <li>If comfortable sharing, is there anyone in this group that has not humbled themselves before the Lord, repented of their sins and asked Jesus into their life?</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-    <li>What are some ways this week that you can help God be the natural solution while He takes care of the supernatural? Tell them that God wants to use them to speak his words over the broken situations around them and then God will take care of the rest.</li>
-    <li>How can you bring restoration in your own life this week?</li>
+    <li>How are some ways this week you can humble yourself for God so He can do great things through you?</li>
   </ul>
   
   <h2>Baptism Follow-Up</h2>
