update for The Fire week 3

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -37,41 +37,42 @@
 
   <div align="middle"><img src="./img/logo-fps-pel.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>Week 2 - The Fire</h1>
+  <h1>Week 3 - The Fire</h1>
 
   <h2>Life / Intro Questions</h2>
     <ul>
-      <li>What are your favorite shows to watch on Netflix?</li>
-      <li>How did you do last week making steps towards restoration in your life?</li>
+      <li>What things did you do this week to work on being humble?</li>
+      <li>What are some things you love in your life? People, things, sports etc.</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>Share a story about a time where you saw something you couldn’t explain. Maybe it was a miracle or a strange phenomenon. What happened in that event and how did it change you?</li>
+      <li>Share about a time where you did something you weren’t supposed to do and got in trouble with your parents. How did you explain yourself and what did you say to them?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
     <ul>
-      <li>We do the natural, and God does the supernatural.</li>
+      <li>Love is always the answer.</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>2 Chronicles 7:12-14</b> <sup>12</sup>Then one night the Lord appeared to Solomon and said, “I have heard your prayer and have chosen this Temple as the place for making sacrifices. <sup></sup>At times I might shut up the heavens so that no rain falls, or command grasshoppers to devour your crops, or send plagues among you. <sup></sup>Then if my people who are called by my name will humble themselves and pray and seek my face and turn from their wicked ways, I will hear from heaven and will forgive their sins and restore their land.</li>
+      <li><b>Isaiah 6:8</b> Then I heard the Lord asking, “Whom should I send as a messenger to this people? Who will go for us?” I said, “Here I am. Send me.”</li>
      <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>How often do you find yourself being prideful in a situation? How do you think that pride can negatively affect the situation?</li>
-    <li>How often do you find yourself praying as a last resort, not a first response to trouble in your life? Why is that?</li>
-    <li>If comfortable sharing, is there anyone in this group that has not humbled themselves before the Lord, repented of their sins and asked Jesus into their life?</li>
+    <li>How often do you find yourself saying that you hate someone or something? Like “Ugh I hate this teacher because she gives us too much homework.” Do you actually hate them or is it just a meaningless expression at this point? Explain.</li>
+    <li>How often do you try to take control of your own life and then it ends up not going good? Explain a time that happened?</li>
+    <li>Do you think that every person out there, no matter the bad they’ve done, should have a chance to get into the kingdom of God? Explain why or why not.</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-    <li>How are some ways this week you can humble yourself for God so He can do great things through you?</li>
+    <li>How can you work on humbly loving everyone this week? Remind them that people are not their enemy because God desires all people to be saved in the kingdom of God.</li>
+    <li>Remind students that when they commit their lives to God, He is ultimately in charge. This means they have to move out of the drivers’ seat and let God drive their life while they just have faith.</li>
   </ul>
   
   <h2>Baptism Follow-Up</h2>
